--- a/EmptyWeb/Views/Index.html
+++ b/EmptyWeb/Views/Index.html
@@ -5,11 +5,14 @@
     <title></title>
 </head>
 <body>
-<form action="/Home/AddEntry/" method="post"  enctype="multipart/form-data">
-    Наименование: <input name="name" /> <br />
-    Текст: <textarea name="text"></textarea> <br />
-    Картинка: <input name="image" type="file" accept="image/*"/> <br />
-    <input type="submit"/>
-</form>
+    <form action="/Home/AddEntry/" method="post" enctype="multipart/form-data">
+        Наименование: <input name="name" /> <br />
+        Текст: <textarea name="text"></textarea> <br />
+        Картинка: <input name="image" type="file" accept="image/*" /> <br />
+        <input type="submit" />
+    </form>
+    <form action="/Home/GetBlogs/" method="get" enctype="multipart/form-data">
+        <button type="submit">Получить все посты</button>
+    </form>
 </body>
 </html>
